[package]
authors = ['andy.bell@barkingmad.io']
description = 'FRAME pallet for time sheets.'
edition = '2018'
homepage = 'https://barkingmad.io'
license = 'MIT'
name = 'pallet-timekeeper'
repository = 'https://github.com/andyjsbell/time-keeping/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
serde = { version="1.0.101", optional = true, features = ["derive"] }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
pallet-timestamp = { default-features = false, version = '2.0.0' }
orml-utilities = {version = '0.3.2', default-features = false}
pallet-access = {default-features = false, path="../access" }
sp-core = { default-features = false, version = '2.0.0' }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
pallet-balances = { version = "2.0.0" }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-timestamp/std',
    'pallet-access/std'
]
